[gd_scene load_steps=8 format=3 uid="uid://dai250gh37d1n"]

[ext_resource type="Theme" uid="uid://j6l6bewon5v3" path="res://misc/main_theme.tres" id="1_clmr6"]
[ext_resource type="Script" uid="uid://bf605vavkry78" path="res://scripts/dialogue_system.gd" id="1_mv12q"]
[ext_resource type="Shader" uid="uid://cxku8ns7xacci" path="res://misc/flash.gdshader" id="2_5ywym"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_clmr6"]
shader = ExtResource("2_5ywym")
shader_parameter/on = false

[sub_resource type="Animation" id="Animation_clmr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5ywym"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_clmr6"]
_data = {
&"RESET": SubResource("Animation_clmr6"),
&"flash": SubResource("Animation_5ywym")
}

[node name="Dialogue System" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_clmr6")
script = ExtResource("1_mv12q")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 163.0
offset_top = 410.0
offset_right = 974.0
offset_bottom = 583.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MessageLabel" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Button" type="Button" parent="."]
material = SubResource("ShaderMaterial_clmr6")
layout_mode = 0
offset_left = 808.0
offset_top = 339.0
offset_right = 968.0
offset_bottom = 398.0
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button"]
libraries = {
&"": SubResource("AnimationLibrary_clmr6")
}

[node name="delay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ChoicesPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 361.0
offset_top = 47.0
offset_right = 805.0
offset_bottom = 361.0

[node name="MarginContainer" type="MarginContainer" parent="ChoicesPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="ChoicesPanel/MarginContainer"]
layout_mode = 2

[node name="ChoicesLabel" type="Label" parent="ChoicesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Choices"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ChoicesPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ChoicesPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="ChoicesPanel/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeakerContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 180.0
offset_top = 361.0
offset_right = 348.0
offset_bottom = 401.0

[node name="MarginContainer" type="MarginContainer" parent="SpeakerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SpeakerLabel" type="Label" parent="SpeakerContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Speaker"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
